Mobile overflow fix

--- a/src/index.css
+++ b/src/index.css
@@ -18,3 +18,5 @@ h1 {
 }
 
 html { scroll-behavior: smooth; }
+
+html, body{ overflow-x: hidden; }
